# Beacon

./: .gitignore  LICENSE
core/: Cargo.toml
core/src/: lib.rs  main.rs
core/src/crypto/: mod.rs
core/src/identity/: mod.rs
core/src/network/: behaviour.rs  commands.rs  config.rs  discovery.rs  mod.rs  peer_keys.rs  swarm.rs
core/src/protocol/: message.rs  mod.rs  types.rs
