[package]
name = "beacon-core"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "tcp",
    "noise",
    "tls",
    "yamux",
    "ping",
    "identify",
    "macros",
]}
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
aes-gcm = "0.10"
rand = "0.8"

# Utils
chrono = "0.4"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"